--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     break;
                 default:
                     // Respon default: menampilkan teks apa pun yang diketik
-                    response.innerText = `Anda mengetik: "${input}😱😱😱"`;
+                    response.innerText = `Anda mengetik: "${input}"karna tebakan saya benar anda harus membayar 100k kepada saya😁😁`;
             }
         }
     </script>
@@ -90,8 +90,8 @@
 <body>
     <!-- Login Page -->
     <div id="loginPage" class="container">
-        <h1>LOGIN</h1>
-        <p>Masukkan username dan password untuk melanjutkan.</p>
+        <h1>PERAMAL</h1>
+        <p>ketik apapun terserah anda.</p>
         <input type="text" id="username" placeholder="Username"><br>
         <input type="password" id="password" placeholder="Password"><br>
         <button onclick="handleLogin()">Login</button>
@@ -104,7 +104,7 @@
         <textarea id="command" rows="3" placeholder="Ketik perintah di sini..."></textarea><br>
         <button onclick="handleCommand()">Kirim</button>
         <div class="response" id="response"></div>
-        <p>© 2024 Hak cipta dilindungi untuk simulasi edukasi.</p>
+        <p>🤨🤨🤨🤨🤨</p>
     </div>
 </body>
 </html>
